# noctig-scorer

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: macros.rs  main.rs
src/database/: README.md  mod.rs  schema.sql  types.rs
src/database/migrations/: mod.rs  v2_add_more_path_caches.sql
src/formatting/: font.rs  formatters.rs  mod.rs  theme.rs
src/layout/: license.rs  mod.rs  scorer.rs  start.rs
src/layout/create_project/: create_viewer.rs  mod.rs  project_data.rs  project_details.rs  project_processing.rs
src/layout/start/: help.rs  home.rs  mod.rs  settings.rs  stream.rs
src/storage/: epoch_reader.rs  mod.rs  multi_reader.rs  project_initializer.rs
src/views/: collapsible.rs  line_chart.rs  mod.rs
src/views/spectrogram/: mod.rs  utils.rs
src/views/spectrogram/widget/: color_maps.rs  mod.rs  shader_handler.rs  spectrogram.wgsl
